# party_purse

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
flows/: main_flow.py
settings/: settings.py  settings.toml
src/party_purse/: config.py  experiment.py  loader.py  parser.py  schemas.py  scraper.py
tests/: test_example.py
