[tool.poetry]
name = "party_purse"
version = "0.1.0"
description = "Party Purse"
authors = ["David Starkey"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
numpy = "^1.26.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
dynaconf = "^3.2"
openai = "^1.0"
beautifulsoup4 = "^4.12"
pydantic = "^2.0"
metaflow = "^2.10.0"



mlflow = "^2.11.0"



streamlit = "^1.32.0"
plotly = "^5.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.3.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
pythonpath = ["."]  # This is key - adds project root to path
addopts = "-v --tb=short"
